# minivit

./: .pre-commit-config.yaml  .pre-commit-seed.yaml  README.md  pyproject.toml
config/: pre-commit-seed.yaml
src/minivit/cli/: entry_point.py
src/minivit/context/: config.py  context.py  options.py
src/minivit/main/: data.py  main.py  model.py  trainer.py
src/minivit/models/: config.py  options.py
tests/: test_cli_entry_point.py  test_main.py
